# aiagent

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent/src/: event.rs  lib.rs  provider.rs  registry.rs  session.rs
crates/agent/src/providers/: anthropic_api.rs  claude_code_cli.rs  codex_cli.rs  mod.rs  openai_api.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  conversation.rs  main.rs
main/.aiagent/: conversations.json
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: client.rs  commands.rs  config.rs  lib.rs  main.rs
src/components/: ChangePasswordModal.jsx  ConversationList.jsx  LoginScreen.jsx  MessageRow.jsx  ProviderBar.jsx  ServerBar.jsx  UserAdmin.jsx
