[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/server",
    "src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
which = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
