[package]
name = "aiagent"
description = "Windows client for AI Agent (relay UI)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "aiagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
dashmap.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
futures = "0.3"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
